Builds out the relative position of the manage-market page
Once you are signed in you are now presented with the manage market page
which will allow the bar owner to add beers to their list and start and
stop the market. The page is built out none of the functionality is there.
next task I think is to build the technology or build the market page.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,6 +2,41 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
 fieldset,
-input {
+input,
+h1 {
   text-align: center;
+}
+
+h2,
+h1 {
+  margin-top: 0;
+}
+
+#welcome-message {
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+}
+
+.beers-container {
+  height: 200px;
+  border: 1px solid black;
+}
+
+#tap-header {
+  margin-top: 20px;
+}
+
+#start,
+#end {
+  width: 50%;
+  text-align: center;
+}
+
+#end {
+  float: right;
+}
+
+#start {
+  float: left;
 }
