--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -12,7 +12,9 @@ h1 {
   margin-top: 0;
 }
 
-#welcome-message {
+#welcome-message,
+#start,
+#end {
   padding-left: 0;
   padding-right: 0;
   text-align: center;
@@ -29,14 +31,6 @@ h1 {
 
 #start,
 #end {
-  width: 50%;
-  text-align: center;
-}
-
-#end {
-  float: right;
-}
-
-#start {
-  float: left;
+  position: fixed;
+  bottom: 0;
 }
