--- a/assets/scripts/templates/show-beers.hbs
+++ b/assets/scripts/templates/show-beers.hbs
@@ -12,15 +12,16 @@
 <div class='container-fluid list-o-beers'>
   {{#each beers as |beer|}}
     <div data-id='{{beer.id}}' class='row one-beer'>
-      <div class='col-xs-4 gutterless'>
+      <div data-id='{{beer.id}}' id='beer-name' class='col-xs-4 gutterless beer-editable'>
         {{beer.name}}
       </div>
-      <div class='col-xs-4 gutterless'>
+      <div data-id='{{beer.id}}' id='beer-price' class='col-xs-4 gutterless beer-editable'>
         {{beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
-        <button data-id='{{beer.id}}' class='edit-button'>Edit</button>
-        <button data-id='{{beer.id}}' class='delete-button'>Delete</button>
+        <button data-id='{{beer.id}}' class='edit-button manage-pg-buttons'>Edit</button>
+        <button data-id='{{beer.id}}' class='delete-button manage-pg-buttons'>Delete</button>
+        <button data-id='{{beer.id}}' class='save-button manage-pg-buttons'>Save</button>
       </div>
     </div>
   {{/each}}
