Builds out the rest of the edit functionality
The edit button now clears the beer name and highlights it and sets the
price to 0.00 on the ui. then the user can update that beer and hit save
which sends a ajax call to patch and then when complete switches the
buttons back to edit and delete and makes the fields un-editable. still
have to build the cancel functionality.

--- a/assets/scripts/templates/show-beers.hbs
+++ b/assets/scripts/templates/show-beers.hbs
@@ -12,16 +12,17 @@
 <div class='container-fluid list-o-beers'>
   {{#each beers as |beer|}}
     <div data-id='{{beer.id}}' class='row one-beer'>
-      <div data-id='{{beer.id}}' id='beer-name' class='col-xs-4 gutterless beer-editable'>
+      <div data-id='{{beer.id}}' class='col-xs-4 gutterless beer-editable beer-name'>
         {{beer.name}}
       </div>
-      <div data-id='{{beer.id}}' id='beer-price' class='col-xs-4 gutterless beer-editable'>
+      <div data-id='{{beer.id}}' class='col-xs-4 gutterless beer-editable beer-price'>
         {{beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
         <button data-id='{{beer.id}}' class='edit-button manage-pg-buttons'>Edit</button>
         <button data-id='{{beer.id}}' class='delete-button manage-pg-buttons'>Delete</button>
         <button data-id='{{beer.id}}' class='save-button manage-pg-buttons'>Save</button>
+        <button data-id='{{beer.id}}' class='cancel-button manage-pg-buttons'>Cancel</button>
       </div>
     </div>
   {{/each}}
