Builds the purchase beer functionality
built out the purchase beer functionality. I added the logic to do the
calculations on the prices based on what is being bought and what is not.
Also updating the UI with the prices every n about of seconds. I also
changed my logic on edit and on delete beer to re-call get beers after
it successfully edit or deletes respectively. this was just to avoid any
unforeseen bugs that might come from updating the UI and not calling the
db.

--- a/assets/scripts/templates/show-market.hbs
+++ b/assets/scripts/templates/show-market.hbs
@@ -12,14 +12,14 @@
 <div class='container-fluid list-o-beers'>
   {{#each beers as |beer|}}
     <div data-id='{{beer.id}}' class='row one-beer'>
-      <div data-id='{{beer.id}}' class='col-xs-4 gutterless beer-editable beer-name'>
+      <div data-id='{{@index}}' class='col-xs-4 gutterless market-beer-name'>
         {{beer.name}}
       </div>
-      <div data-id='{{beer.id}}' class='col-xs-4 gutterless beer-editable beer-price'>
+      <div data-id='{{@index}}' class='col-xs-4 gutterless market-beer-price'>
         {{beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
-        <button data-id='{{beer.id}}' class='purchased-button'>Purchased</button>
+        <button data-id='{{@index}}' class='purchased-button'>Purchased</button>
       </div>
     </div>
   {{/each}}
