--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -29,16 +29,6 @@ h1 {
   margin-top: 0px;
 }
 
-#beer-list {
-  margin-top: 20px;
-}
-
-#start,
-#end {
-  position: fixed;
-  bottom: 0;
-}
-
 .beer-headers {
   margin: 10px 0;
   border-bottom: 1px solid black;
@@ -47,4 +37,40 @@ h1 {
 .save-button,
 .cancel-button {
   padding: 0 2px;
+}
+
+#price {
+  margin-bottom: 10px;
+}
+
+.btn-primary {
+  margin: 10px 0;
+}
+
+.navbar {
+  margin-bottom: 10px;
+}
+
+.mrkt-action-buttons {
+  text-align: center;
+  margin-top: 20px;
+  background-color: #57C45D;
+  border-radius: 5px;
+}
+
+#market-info {
+  text-align: center;
+  margin-bottom: 20px 0;
+}
+
+@media screen and (max-height: 650px) {
+  .beers-container {
+    height: 150px;
+  }
+}
+
+@media screen and (max-height: 600px) {
+  .beers-container {
+    height: 100px;
+  }
 }
