Optimizes the look on the desktop view and fixes the decimal point defect
I worked to make the desktop view look much better. this also fixes the
defect where prices were only showing one decimal point if they were zero's
somewhere from the db to the ui this was happening so I added a helper
 function to the templates to convert the decimals into strings with 2
 decimal places

--- a/assets/scripts/templates/show-beers.hbs
+++ b/assets/scripts/templates/show-beers.hbs
@@ -16,7 +16,7 @@
         {{beer.name}}
       </div>
       <div data-id='{{beer.id}}' class='col-xs-4 gutterless beer-editable beer-price'>
-        {{beer.price}}
+        {{money beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
         <button data-id='{{beer.id}}' class='edit-button manage-pg-buttons'>Edit</button>
