--- a/assets/scripts/templates/show-market.hbs
+++ b/assets/scripts/templates/show-market.hbs
@@ -16,7 +16,7 @@
         {{beer.name}}
       </div>
       <div data-id='{{@index}}' class='col-xs-4 gutterless market-beer-price'>
-        {{beer.price}}
+        {{money beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
         <button data-id='{{@index}}' class='purchased-button'>Purchased</button>
