Adds a ton of styling to the page to make it look better.
also fixes the issue where there were errors in the console if there were
no beers in the beer list

--- a/assets/scripts/templates/show-beers.hbs
+++ b/assets/scripts/templates/show-beers.hbs
@@ -19,10 +19,10 @@
         {{money beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
-        <button data-id='{{beer.id}}' class='edit-button manage-pg-buttons'>Edit</button>
-        <button data-id='{{beer.id}}' class='delete-button manage-pg-buttons'>Delete</button>
-        <button data-id='{{beer.id}}' class='save-button manage-pg-buttons'>Save</button>
-        <button data-id='{{beer.id}}' class='cancel-button manage-pg-buttons'>Cancel</button>
+        <button data-id='{{beer.id}}' class='button-secondary edit-button manage-pg-buttons'>Edit</button>
+        <button data-id='{{beer.id}}' class='button-error delete-button manage-pg-buttons'>Delete</button>
+        <button data-id='{{beer.id}}' class='button-success save-button manage-pg-buttons'>Save</button>
+        <button data-id='{{beer.id}}' class='button-warning cancel-button manage-pg-buttons'>Cancel</button>
       </div>
     </div>
   {{/each}}
