--- a/assets/scripts/templates/show-market.hbs
+++ b/assets/scripts/templates/show-market.hbs
@@ -19,7 +19,7 @@
         {{money beer.price}}
       </div>
       <div class='col-xs-4 gutterless'>
-        <button data-id='{{@index}}' class='purchased-button'>Purchased</button>
+        <button data-id='{{@index}}' class='button-secondary purchased-button'>Purchased</button>
       </div>
     </div>
   {{/each}}
