--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -18,9 +18,36 @@ h2 {
   text-align: center;
 }
 
+.button-success,
+.button-error,
+.button-warning,
+.button-secondary {
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.button-success {
+    background: rgb(28, 184, 65); /* this is a green */
+}
+
+.button-error {
+    background: rgb(202, 60, 60); /* this is a maroon */
+}
+
+.button-warning {
+    background: rgb(223, 117, 20); /* this is an orange */
+}
+
+.button-secondary {
+    background: rgb(66, 184, 221); /* this is a light blue */
+}
+
+
 h2,
 h1 {
   margin-top: 0;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 .gutterless {
@@ -46,9 +73,10 @@ h1 {
   border-radius: 15px;
 }
 
-.save-button,
-.cancel-button {
-  padding: 0 2px;
+#start,
+#end {
+  color: white;
+  margin: 5px 0;
 }
 
 #price {
@@ -73,6 +101,10 @@ h1 {
   margin-bottom: 10px;
 }
 
+.one-beer {
+  margin: 10px 0;
+}
+
 .mrkt-action-buttons {
   text-align: center;
   max-width: 400px;
@@ -80,6 +112,7 @@ h1 {
   background-color: #57C45D;
   border-radius: 5px;
 }
+
 
 #market-info {
   text-align: center;
@@ -121,6 +154,9 @@ h1 {
   }
   .mrkt-action-buttons {
     margin-top: 60px;
+  }
+  .one-beer {
+    font-size: 15px;
   }
 }
 
