Adds some styling and fixes an issue with edit rendering spaces
I switched scraping the edit info from .html to .text so that it doesnt
compute extra spaces to htmly things

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -151,6 +151,7 @@ h1 {
   .info-headers {
     max-width: 500px;
     margin: auto;
+    font-size: 14px;
   }
   .mrkt-action-buttons {
     margin-top: 60px;
